[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/open_kanban/res/boxes/dark_outer.tres" type="StyleBox" id=1]
[ext_resource path="res://addons/open_kanban/res/fonts/regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://addons/open_kanban/system/line_edit.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/open_kanban/res/images/ui/darg.png" type="Texture" id=4]
[ext_resource path="res://addons/open_kanban/system/drag_component.gd" type="Script" id=7]
[ext_resource path="res://addons/open_kanban/system/list.gd" type="Script" id=8]
[ext_resource path="res://addons/open_kanban/res/boxes/empty.tres" type="StyleBox" id=9]
[ext_resource path="res://addons/open_kanban/system/tool_button.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="list" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.5
margin_top = -63.0
margin_right = 122.5
margin_bottom = 63.0
rect_min_size = Vector2( 245, 126 )
focus_mode = 2
mouse_filter = 0
size_flags_vertical = 0
custom_constants/separation = 6
script = ExtResource( 8 )

[node name="tab" type="HBoxContainer" parent="."]
margin_right = 245.0
margin_bottom = 48.0
rect_min_size = Vector2( 240, 48 )
custom_constants/separation = 6

[node name="drag" parent="tab" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 24.0
margin_bottom = 48.0
rect_min_size = Vector2( 24, 48 )
mouse_default_cursor_shape = 13
script = ExtResource( 7 )

[node name="texture" type="TextureRect" parent="tab/drag"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="title" type="PanelContainer" parent="tab"]
margin_left = 30.0
margin_right = 231.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 14 )

[node name="list_title" parent="tab/title" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 201.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
max_length = 24

[node name="label" type="Label" parent="tab/title"]
margin_right = 201.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.352941, 0.352941, 0.352941, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 5 )
valign = 1
autowrap = true

[node name="button" type="ToolButton" parent="tab/title"]
margin_right = 201.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="num" type="Label" parent="tab"]
margin_left = 237.0
margin_right = 245.0
margin_bottom = 48.0
size_flags_vertical = 5
custom_colors/font_color = Color( 0.352941, 0.352941, 0.352941, 1 )
text = "0"
align = 1
valign = 1

[node name="container" type="PanelContainer" parent="."]
margin_top = 54.0
margin_right = 245.0
margin_bottom = 126.0
rect_min_size = Vector2( 245, 72 )
custom_styles/panel = ExtResource( 1 )

[node name="vbox" type="VBoxContainer" parent="container"]
margin_left = 12.0
margin_top = 12.0
margin_right = 233.0
margin_bottom = 60.0
custom_constants/separation = 6

[node name="add" type="PanelContainer" parent="container/vbox"]
margin_right = 221.0
margin_bottom = 48.0
rect_min_size = Vector2( 221, 48 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 9 )

[node name="card_title" parent="container/vbox/add" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_top = 12.0
margin_right = 209.0
margin_bottom = 36.0
custom_colors/cursor_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/clear_button_color_pressed = Color( 0.647059, 0.647059, 0.647059, 1 )
custom_colors/font_color_selected = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/clear_button_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_uneditable = Color( 0.878431, 0.878431, 0.878431, 1 )
placeholder_text = "+ 添加卡片"
OTS_ID = "ADD_CARD"

[connection signal="focus_exited" from="tab/title/list_title" to="." method="_on_list_title_text_entered"]
[connection signal="text_entered" from="tab/title/list_title" to="." method="_on_list_title_text_entered"]
[connection signal="pressed" from="tab/title/button" to="." method="title_edit"]
[connection signal="sort_children" from="container/vbox" to="." method="_on_vbox_sort_children"]
[connection signal="text_entered" from="container/vbox/add/card_title" to="." method="add_card"]
